--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     AV.init({
         appId: "lpvY7hVpig4TBl72FNiHfq2a-MdYXbMMI", //你的 leancloud 应用 id （设置-应用keys-AppID）
         appKey: "QuEXGhHdyPpn8EkMmTEJD3jb", //你的 leancloud 应用 AppKey （设置-应用keys-AppKey）
-        serverURLs: '国际版可删除该行，否则必须在后台绑定域名并填写在此'
+        //serverURLs: '国际版可删除该行，否则必须在后台绑定域名并填写在此'
     });
 
     var query = new AV.Query('content');
